# aas-rdf-util

./: .gitignore  Dockerfile.backend  LICENSE  README.md  aasql.py  deploy.sh  dev.py  docker-compose.yml  main.py  pyproject.toml  run-local.sh
app/: aasql_json.py  aasql_pipeline.py  aasql_schema.json  converters.py  schemas.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/public/: example-battery-passport.json  faq-index.json  llm.txt  llms.txt  robots.txt  simple-example.json
frontend/src/: App.jsx  main.jsx  styles.css
frontend/src/components/: GraphView.jsx
tests/: test_aasql_examples.py
