[project]
name = "aas-rdf-util"
version = "0.1.0"
description = "Utility API for py-aas-rdf conversions and AASQL to SPARQL"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "rdflib>=7.0.0",
  "requests>=2.32.0",
  "lark>=1.2.2",
  "jsonschema>=4.23.0",
  "py-aas-rdf @ git+https://github.com/mhrimaz/py-aas-rdf.git@experimental",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
only-include = ["main.py", "aasql.py"]
